# mosaico

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.plans/: phase-01.md  phase-02.md  phase-03a.md  phase-03b.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md  phase-19.md  phase-20.md  phase-21.md  phase-22.md  phase-23.md  phase-24.md  phase-25.md  phase-26.md  phase-27.md  phase-28.md  phase-29.md  phase-30.md  phase-31.md  phase-32.md  plan.md
crates/mosaico/: Cargo.toml
crates/mosaico-core/: Cargo.toml
crates/mosaico-core/src/: action.rs  config.rs  event.rs  ipc.rs  layout.rs  lib.rs  log.rs  pid.rs  rect.rs  spatial.rs  version.rs  window.rs  workspace.rs
crates/mosaico-core/src/config/: bar.rs  keybinding.rs  keybindings_entries.rs  keybindings_focus_move.rs  keybindings_header.rs  keybindings_workspaces.rs  loader.rs  mod.rs  palette.rs  rules.rs  template.rs  template_bar.rs  template_config.rs  template_keybindings.rs  template_rules.rs  template_tests.rs  tests.rs  theme.rs  types.rs
crates/mosaico-core/src/layout/: bsp.rs  mod.rs  tests.rs  three_column.rs  vertical_stack.rs
crates/mosaico-windows/: Cargo.toml
crates/mosaico-windows/src/: autostart.rs  bar_manager.rs  border.rs  community_rules.rs  config_watcher.rs  ctrl_c.rs  daemon.rs  daemon_ipc.rs  daemon_loop.rs  daemon_loop_handlers.rs  daemon_threads.rs  daemon_types.rs  dpi.rs  enumerate.rs  event.rs  event_loop.rs  event_loop_event_sink.rs  event_loop_message_pump.rs  event_loop_win_event.rs  frame.rs  hotkey.rs  http.rs  instance_guard.rs  ipc.rs  keys.rs  lib.rs  monitor.rs  process.rs  tiling.rs  version_check.rs  window.rs
crates/mosaico-windows/src/bar/: mod.rs  render.rs  text.rs
crates/mosaico-windows/src/bar/widgets/: active_window.rs  clock.rs  cpu.rs  date.rs  layout.rs  media.rs  mod.rs  paused.rs  ram.rs  system.rs  update.rs  workspaces.rs
crates/mosaico-windows/src/com/: interfaces.rs  mod.rs
crates/mosaico-windows/src/tiling/: display.rs  event_handler.rs  focus.rs  helpers.rs  layout.rs  lifecycle.rs  mod.rs  navigation.rs  navigation_helpers.rs  tests.rs  workspace.rs
crates/mosaico-windows/src/tiling/tests/: display_tests.rs  hiding_tests.rs  minimize_tests.rs  monitor_tests.rs  monocle_tests.rs  workspace_tests.rs
crates/mosaico/src/: main.rs
crates/mosaico/src/commands/: action.rs  autostart.rs  banner.rs  daemon.rs  doctor.rs  doctor_runtime.rs  init.rs  mod.rs  pause.rs  start.rs  status.rs  stop.rs  update.rs  version_check.rs
crates/mosaico/src/commands/debug/: events.rs  list.rs  mod.rs  move_window.rs  state.rs
crates/mosaico/tests/: cli.rs  window_management.rs
docs/: actions.md  cli.md  configuration.md  daemon.md  debug-tools.md  focus-border.md  install.ps1  ipc.md  keyboard-bindings.md  logging.md  monitor-management.md  pid-management.md  status-bar.md  theming.md  tiling-layout.md  window-events.md  window-management.md  workspaces.md
scripts/: check_notepad_windows.ps1  close_all_notepads.ps1  screenshot.ps1  screenshot_all.ps1  test_screenshot.ps1
src/: main.rs
website/: book.toml
website/src/: README.md  SUMMARY.md  theme.css  theme.js
website/src/guide/: cli.md  configuration.md  debug-tools.md  focus-border.md  getting-started.md  installation.md  keybindings.md  logging.md  multi-monitor.md  status-bar.md  theming.md  tiling-layout.md  window-rules.md  workspaces.md
