[package]
name = "mosaico-windows"
version = "0.2.2"
edition = "2024"
description = "Windows platform implementation for Mosaico"
license = "MIT"

[dependencies]
mosaico-core = { path = "../mosaico-core" }
serde_json = "1"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Graphics_Dwm",              # DwmGetWindowAttribute (extended frame bounds)
    "Win32_Graphics_Gdi",              # MonitorFromWindow, GetMonitorInfoW
    "Win32_UI_WindowsAndMessaging",   # EnumWindows, GetWindowTextW, GetMessageW, etc.
    "Win32_UI_Accessibility",          # SetWinEventHook, UnhookWinEvent
    "Win32_UI_Input_KeyboardAndMouse", # RegisterHotKey, UnregisterHotKey
    "Win32_UI_HiDpi",                  # SetProcessDpiAwarenessContext
    "Win32_Foundation",                # HWND, BOOL, RECT, LPARAM, DuplicateHandle
    "Win32_System_SystemInformation",  # GlobalMemoryStatusEx, GetLocalTime
    "Win32_System_Threading",          # GetWindowThreadProcessId, GetCurrentProcess
    "Win32_System_Pipes",              # CreateNamedPipeW, DisconnectNamedPipe
    "Win32_System_IO",                 # ConnectNamedPipe (requires overlapped IO module)
    "Win32_Storage_FileSystem",        # CreateFileW (pipe client)
    "Win32_Security",                  # Required by CreateFileW and CreateNamedPipeW
    "Win32_Networking_WinHttp",        # WinHttpOpen, WinHttpConnect, etc.
]

[lints]
workspace = true
