[package]
name = "mosaico"
version = "0.1.0"
edition = "2024"
description = "A cross-platform tiling window manager"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
mosaico-core = { path = "../mosaico-core" }
mosaico-windows = { path = "../mosaico-windows" }

[lints]
workspace = true
