[package]
name = "mosaico"
version = "0.2.1"
edition = "2024"
description = "A cross-platform tiling window manager"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
mosaico-core = { path = "../mosaico-core" }
mosaico-windows = { path = "../mosaico-windows" }

[lints]
workspace = true
