[package]
name = "mosaico"
version = "0.3.1"
edition = "2024"
description = "A cross-platform tiling window manager"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
mosaico-core = { path = "../mosaico-core" }
mosaico-windows = { path = "../mosaico-windows" }
zip = { version = "2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
